
 - Updated Swedish translation (Christian Rose).
 - Updated Spanish translation (Pablo del Campo).
 - Updated Dutch translation (Bart Coppens).
 - Added /GETSTR and /GETINT.
 - Misc. serverlist bug fixes (Shaun Guth).
 - Plugin changes/fixes:
   * Added xchat_get_info("network").
   * Added new function: xchat_hook_fd().
   * Fixed "DCC Chat Text" event (Daniel P. Stasinski).
   * Fixed implementation of EAT_ return codes.
   * Keep the leading ":" in server events passed to plugins.
   * Added hack to make plugins possible on win32.
   * Fixed /unload <plugin_file_name> crash.
 - Fixed changing tabs via keyboard.
 - Added a few keyboard accelerators to the menubar.
 - Fixed close-tab-0 crash.
 - Fixed userlist popup menu disappearing on button-release.
 - Fixed color paste.
 - Added a character set selector to the serverlist.
 - Send DCC filenames in system encoding (gets converted if a charset
   is chosen in the serverlist).
 - Fixed possible Search Text crash.
 - Removed --enable-japanese-conv configure option (isn't this
   superseded by the new charset selector?).
 - Use --enable-openssl by default.
 - Fixed your nick not changing in dialog windows.
 - xtext: deal better with invalid utf8.
 - 


----------------------------------------------------------------------
 1.9.6
----------------------------------------------------------------------

 - Updated Spanish translation (Pablo del Campo).
 - Added Estonian translation (Ilmar Kerm).
 - Made switching to dialog tabs faster:
   * Draw xtext only once when switching to a dialog tab.
   * Do not recalculate the tinted-transparency.
 - Fixed another text-off-the-bottom bug.
 - Fixed background color other than black not working.
 - Fixed dialog windows not being logged (Joanne Hunter).
 - Fixed topic entry box going blank bug.
 - Added Insert-color-code and encoding submenu in the bottom-right
   button.
 - Apply more settings without needing a restart:
   * Background image.
   * Time stamp text on/off.