@@ -38,9 +38,9 @@ If you do not have GNU Gettext installed, instead use:
 	./configure --disable-nls
 
 
-If you want to disable Gnome and/or Perl you can do:
+If you want to disable Perl you can do:
 
-	./configure --disable-perl --disable-gnome
+	./configure --disable-perl
 
 
 If you want to install a smaller stripped binary (without debug) do:
