@@ -33,6 +33,7 @@ void servlist_init (void);
 void servlist_save (void);
 int servlist_cycle (server *serv);
 void servlist_connect (session *sess, ircnet *net);
+int servlist_connect_by_netname (session *sess, char *network);
 int servlist_auto_connect (session *sess);
 int servlist_have_auto (void);
 
